# viaduct

./: .gitattributes  .gitignore  AGENTS.md  PROJECT.md  README.md  ROADMAP.md
app/resources/: articles.via  comments.via  posts.via
docs/: via.ebnf
examples/blog/: Cargo.toml  README.md
examples/blog/app/resources/: articles.via  comments.via
examples/blog/src/: main.rs
locors_test/: Cargo.toml
locors_test/assets/views/posts/: create.html  (+3 more)
locors_test/config/: development.yaml  test.yaml
locors_test/examples/: playground.rs
locors_test/migration/src/: lib.rs  m20250913_120023_posts.rs  m20250913_120150_images.rs  m20250913_120217_comments.rs
locors_test/src/: app.rs
locors_test/src/controllers/: posts.rs
locors_test/src/models/: images.rs  mod.rs  posts.rs
locors_test/src/views/: posts.rs
locors_test/tests/models/: comments.rs  mod.rs  users.rs
locors_test/tests/requests/: auth.rs  prepare_data.rs
via-core/: Cargo.toml
via-core/src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  via.pest  writer.rs
via-core/tests/: cli_smoke.rs  codegen_snapshots.rs
via-core/tests/fixtures/: article.via
via-core/tests/fixtures_invalid/: missing_colon.via
via-core/tests/snapshots/: codegen_snapshots__article__Cargo.toml.snap  codegen_snapshots__article__src__controllers__article.rs.snap  codegen_snapshots__article__src__lib.rs.snap  codegen_snapshots__article__src__models__article.rs.snap  codegen_snapshots__article__src__models__mod.rs.snap  codegen_snapshots__article__ts__index.ts.snap  codegen_snapshots__article__ts__models__article.ts.snap
(+5 files in other folders)
